--- a/public/style.css
+++ b/public/style.css
@@ -218,10 +218,10 @@
 .restat-button {
     font-size: 17px;
     cursor: pointer;
-    margin-top: 5px;
+    margin-top: 10px;
     border-radius: 10px;
     border: none;
-    padding: 8px;
+    padding: 8px 15px;
 }
 
 /* footer */
